--- a/Task2/nbproject/private/private.properties
+++ b/Task2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\jcn0852.AUTUNI.000\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\jcn0852.AUTUNI\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
